<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/example_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:fontFamily="sans-serif"
        android:text="@string/example_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/bright_grey_text"
        app:layout_constraintStart_toEndOf="@+id/labelPrice"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:fontFamily="sans-serif"
        android:text="@string/example_text"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/bright_grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:focusable="false"
        android:text="@string/sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:text="@string/price"
        android:textColor="@color/grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/labelQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallMargin"
        android:text="@string/quantity"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</android.support.constraint.ConstraintLayout>